--- a/src/sass/4-layout/1-home/skills.scss
+++ b/src/sass/4-layout/1-home/skills.scss
@@ -19,6 +19,12 @@
 }
 }
 
+.enjoy-containter{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .skill-list{
     display: flex;
     flex-wrap: wrap;
