--- a/src/sass/4-layout/navigation.scss
+++ b/src/sass/4-layout/navigation.scss
@@ -4,6 +4,10 @@
     font-size: 1em;
     text-align: right;
 }
+.link-hp a:hover{
+
+    color: $third-color;
+}
 
 .link-hp{
 background: $fourth-color;
