--- a/src/sass/4-layout/1-home/about.scss
+++ b/src/sass/4-layout/1-home/about.scss
@@ -25,14 +25,9 @@
 }
 .about-content-R{
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 5%;
     padding: .5em 0;
     @media screen and (min-width:600px) { 
-        justify-content: space-around;
-        width: 80%;
+        padding: 7em 0;
 
     }
 }
@@ -46,6 +41,9 @@
 
 .overlay{
     text-align: center;
+}
+.overlay p{
+    font-weight: bold;
 }
 
 .layer{
