--- a/src/sass/4-layout/2-Projects/containerone.scss
+++ b/src/sass/4-layout/2-Projects/containerone.scss
@@ -1,12 +1,12 @@
 .flex-init{
-    @media screen and (min-width:500px) {  
+    @media screen and (min-width:600px) {  
     display: flex;
     flex-wrap: initial;
     flex: 50%
 }}
 
 .layout-content-grid-1 article{
-margin-right: .5em;
+margin: 1em 0;
 }
 a.left
 {
@@ -34,7 +34,7 @@ a.left:hover:before {
   }
 
 .layout-content-grid-1{
-    @media screen and (min-width:500px) {  
+    @media screen and (min-width:600px) {  
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 10px 10px;
@@ -55,77 +55,79 @@ a.left:hover:before {
 }
 
 .layout-container-l{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l;
 }
 }
 
 .layout-container-l2{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l2;
 }
 }
 
 .layout-container-l3{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l3;
 }
 }
 .layout-container-l4{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l4;
 }
 }
 .layout-container-l5{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l5;
 }
 }
 .layout-container-l6{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l6;
 }
 }
 .layout-container-l7{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l7;
 }
 }
 .layout-container-l8{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l8;
 }
 }
 .layout-container-l9{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l9;
 }
 }
 .layout-container-l10{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-l10;
 }
 }
 .layout-container-r{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-r; 
 }
 }
 
 .layout-container-r2{
-    @media screen and (min-width:500px){
+    background-color: $primary-color;
+    padding: 1em;
+    @media screen and (min-width:600px){
     grid-area: layout-container-r2; 
 }
 }
 
 .layout-container-r3{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-r3; 
 }
 }
 
 .layout-container-center{
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     grid-area: layout-container-center; 
 }
 }
@@ -151,7 +153,7 @@ a.left:hover:before {
 iframe{
     width: 95%;
     height: 150px;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     height: 300px;
 }
 }
@@ -176,7 +178,7 @@ iframe{
     background-size: auto;
 }
 .layout-content-grid-1 i{
-color: #F68F75;
+font-size: 18px;
 font-weight: bold;
 }
 
@@ -185,7 +187,7 @@ font-weight: bold;
     height: auto;
     margin: auto;
     display: block;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 80%;
 }
 }
@@ -195,7 +197,7 @@ font-weight: bold;
     height: auto;
     margin: auto;
     display: block;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 50%;
 }   
 }
@@ -205,7 +207,7 @@ font-weight: bold;
     height: auto;
     margin: auto;
     display: block;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 25%;
 }  
 }
@@ -215,14 +217,14 @@ font-weight: bold;
     height: auto;
     margin: auto;
     display: block;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 80%;
 }  
 }
 
 .layout-container-l6 img{
     width: 100%;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 60%;
     height: auto;
     margin: auto;
@@ -232,7 +234,7 @@ font-weight: bold;
 
 .layout-container-l7 .img-1{
     width: 100%;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 60%;
     height: auto;
     margin: auto;
@@ -241,7 +243,7 @@ font-weight: bold;
 }
 .layout-container-l7 .img-2{
     width: 100%;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 60%;
     height: auto;
     margin: auto;
@@ -250,7 +252,7 @@ font-weight: bold;
 }
 .layout-container-l8 img{
     width: 100%;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 50%;
     height: auto;
     margin: auto;
@@ -259,7 +261,7 @@ font-weight: bold;
 }
 .layout-container-l9 img{
     width: 100%;
-    @media screen and (min-width:500px){
+    @media screen and (min-width:600px){
     width: 50%;
     height: auto;
     margin: auto;
@@ -268,3 +270,27 @@ font-weight: bold;
 }  
 }
 
+.layout-container-r2 h2{
+ color: $hero-text-color;
+ margin:  1em;
+}
+.skill-list-project{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+}
+
+.skills-style-proj{
+    width: 100%;
+    max-width: 48%;
+    margin: .2em;
+    border: 4px solid $hero-text-color;
+    color: $hero-text-color;
+    border-radius: 50px;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    @media screen and (min-width: 600px){
+        font-size: 18px;
+}
+}
