updated some content on the Ink Tank
updated links, change animation style , and fix some spelling

--- a/src/sass/3-basics/typograpgy.scss
+++ b/src/sass/3-basics/typograpgy.scss
@@ -36,6 +36,11 @@ a{
     font-family: 18px;
 }
 
+li{
+    font-family: 'Quicksand', sans-serif;
+    font-family: 18px;  
+}
+
 .primary-header{
     padding: 1em 0;
     font-size: 50px;
