--- a/src/sass/4-layout/1-home/resume.scss
+++ b/src/sass/4-layout/1-home/resume.scss
@@ -8,7 +8,7 @@ text-align: center;
     width: 50%;
     padding: 15px;
     overflow-x: hidden;
-    background-color: #00d4d0;
+    background-color: $fourth-color;
     transition: ease-in .3s;
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
@@ -26,9 +26,10 @@ text-align: center;
     font-size: 1em;
 }
 .about:hover{
-    transition: ease-out 0.2s;
-    color: $secondary-color;
-    background-color: $third-color;
+    color: $hero-text-color;
+    background: $third-color;
+    transition: ease-out .3s;
+    transform: scale(1);
 }
 
 .resume p{
