--- a/src/sass/1-helpers/variables.scss
+++ b/src/sass/1-helpers/variables.scss
@@ -1,13 +1,18 @@
 /* COLOR */
+
+/* COLOR */
 $primary-color: #000;
 $secondary-color:  #565454;
-$third-color:#49957A;
+$main-hover-color:#fff;
+$third-color:#d5b942;
 $fourth-color: #b2f5de;
+$fifth-color: #d5b942;
 $hero-text-color: #fff;
 $first-button-social-color: #fff;
 $second-button-social-color: #000;
 $first-button-social-color-hover: #fef0a9;
 $hover-color: #F68F75;
+
 
 
 
