--- a/src/sass/4-layout/1-home/resume.scss
+++ b/src/sass/4-layout/1-home/resume.scss
@@ -17,8 +17,9 @@ text-align: center;
     border-radius: 40px;
     border: 2px solid #000;
     margin: 1% auto;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    font-size: 1em;
+    font-family: "Quicksand", sans-serif;
 
 
 }
