--- a/src/sass/4-layout/1-home/skills.scss
+++ b/src/sass/4-layout/1-home/skills.scss
@@ -1,5 +1,5 @@
 .skill-container{
-    background-color: $fourth-color;
+    background-color: $fifth-color;
     color: $primary-color; 
     padding: 1em;
 
@@ -11,11 +11,12 @@
     margin: .2em;
     border: 4px solid $primary-color;
     border-radius: 50px;
-    font-size: 14px;
+    font-size: 2em;
     font-weight: 600;
     text-align: center;
     @media screen and (min-width: 600px){
-        font-size: 18px;
+        padding: 10px;
+        font-size: 2.5em;
 }
 }
 
