--- a/src/sass/4-layout/1-home/gallery-pop-up.scss
+++ b/src/sass/4-layout/1-home/gallery-pop-up.scss
@@ -6,7 +6,8 @@
 
     .illustration{
     width: 100%;
-    display: inline-flex;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 .ill-border{
