--- a/src/sass/1-helpers/variables.scss
+++ b/src/sass/1-helpers/variables.scss
@@ -3,15 +3,15 @@
 /* COLOR */
 $primary-color: #000;
 $secondary-color:  #565454;
-$main-hover-color:#fff;
-$third-color:#d5b942;
-$fourth-color: #b2f5de;
-$fifth-color: #d5b942;
+$main-hover-color:#d4d4d4;
+$third-color:#8DC7AB;
+$fourth-color: #8DC7AB;
+$fifth-color: #F68F75;
 $hero-text-color: #fff;
 $first-button-social-color: #fff;
 $second-button-social-color: #000;
 $first-button-social-color-hover: #fef0a9;
-$hover-color: #F68F75;
+$hover-color: #6B868A;
 
 
 
