--- a/src/sass/4-layout/2-Projects/Project-hero.scss
+++ b/src/sass/4-layout/2-Projects/Project-hero.scss
@@ -1,5 +1,5 @@
 .layout-hero{
-    background-color: #F68F75;
+    background-color: $third-color;
     height:250px;
     width: 100%;
     padding: 0;
