--- a/src/sass/4-layout/1-home/resume.scss
+++ b/src/sass/4-layout/1-home/resume.scss
@@ -1,7 +1,7 @@
 .resume{
 display: block;
 text-align: center;
-
+padding: 10% 0;
 }
 
 .about {
@@ -27,8 +27,8 @@ text-align: center;
     font-size: 1em;
 }
 .about:hover{
-    color: $hero-text-color;
-    background: $third-color;
+    color: $primary-color;
+    background: $hover-color;
     transition: ease-out .3s;
     transform: scale(1);
 }
