--- a/src/sass/4-layout/2-Projects/containerone.scss
+++ b/src/sass/4-layout/2-Projects/containerone.scss
@@ -38,21 +38,21 @@ a.left:hover:before {
     margin: 2em;
     @media screen and (min-width:700px) {  
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 10px 10px;
         grid-template-areas:
-          "layout-container-l layout-container-l"
-          "layout-container-l2 layout-container-r2"
-          "layout-container-l3 layout-container-l3"
-          "layout-container-l4 layout-container-l4"
-          "layout-container-l5 layout-container-l5"
-          "layout-container-l6 layout-container-l6"
-          "layout-container-l66 layout-container-l66"
-          "layout-container-l7 layout-container-l7"
-          "layout-container-l8 layout-container-l8"
-          "layout-container-l9 layout-container-l9"
-          "layout-container-l10 layout-container-l10"
-          "layout-container-center layout-container-center";
+          "layout-container-l layout-container-l layout-container-l layout-container-l"
+          "layout-container-l2 layout-container-r2 layout-container-r2 layout-container-r2"
+          "layout-container-l3 layout-container-l3 layout-container-l3  layout-container-l3"
+          "layout-container-l4 layout-container-l4 layout-container-l4 layout-container-l4"
+          "layout-container-l5 layout-container-l5 layout-container-l5 layout-container-l5"
+          "layout-container-l6 layout-container-l6 layout-container-l6 layout-container-l6"
+          "layout-container-l66 layout-container-l66 layout-container-l66 layout-container-l66"
+          "layout-container-l7 layout-container-l7 layout-container-l7 layout-container-l7"
+          "layout-container-l8 layout-container-l8 layout-container-l8 layout-container-l8"
+          "layout-container-l9 layout-container-l9 layout-container-l9 layout-container-l9"
+          "layout-container-l10 layout-container-l10 layout-container-l10 layout-container-l10"
+          "layout-container-center layout-container-center layout-container-center layout-container-center";
 }
 }
 .layout-container-l22{
@@ -73,14 +73,7 @@ list-style-type: circle
 }
 }
 
-.layout-container-l2{
-    @media screen and (min-width:600px){
-    display: flex;
-    justify-content: space-between;
-    grid-area: layout-container-l2;
-    margin-bottom: 1em;
-}
-}
+
 
 .layout-container-l3{
     @media screen and (min-width:600px){
@@ -134,7 +127,7 @@ list-style-type: circle
 }
 
 .layout-container-r2{
-    background-color: $hover-color;
+    background-color: $third-color;
     padding: 1em;
     @media screen and (min-width:600px){
     grid-area: layout-container-r2; 
@@ -315,16 +308,17 @@ text-align: center;
 .skills-style-proj{
     padding: 10px;
     width: 100%;
-    max-width: 48%;
+    max-width: 50%;
     margin: .2em;
     border: 4px solid #000;
     color: #000;
     border-radius: 50px;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 600;
     text-align: center;
-    @media screen and (min-width: 600px){
+    @media screen and (min-width: 900px){
         font-size: 1em;
+        max-width: 45%;
 }
 @media screen and (min-width: 900px){
     font-size: 1.5em;
