updated the video display for Chowdown

--- a/src/sass/4-layout/2-Projects/containerone.scss
+++ b/src/sass/4-layout/2-Projects/containerone.scss
@@ -165,10 +165,11 @@ list-style-type: circle
 
 
 iframe{
-    width: 95%;
-    height: 150px;
-    @media screen and (min-width:600px){
-    height: 300px;
+ max-width: 95%;
+ display:block;
+ margin: 1.5em auto;
+@media screen and (min-width:600px){
+    max-width: 95%;
 }
 }
 
