--- a/src/sass/4-layout/footer.scss
+++ b/src/sass/4-layout/footer.scss
@@ -15,7 +15,9 @@
         text-align: start;
     }
 }
-
+.footer-links-bottom h1{
+    font-size: 2.5em;
+}
 #bottomFooter ul {
     display: inline-flex;
 }
