--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 /* PROJECT LAYOUT */
 @import "./4-layout/2-Projects/Project-hero.scss";
 @import "./4-layout/2-Projects/containerone.scss";
+@import "./4-layout/2-Projects/illustration-comp.scss";
 
 
 
