--- a/src/sass/4-layout/1-home/hero.scss
+++ b/src/sass/4-layout/1-home/hero.scss
@@ -1,12 +1,5 @@
     .hero-body{
         @media (min-width: 600px) {
-            display: grid;
-            grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr;
-            grid-template-areas:
-            
-              "hero-container-L hero-container-L hero-container  hero-container"
-              ". . . ."
-              ". . . .";
 
     }
     }
@@ -27,8 +20,20 @@
 }
 }
 
+.hero-background{
+    background-image: linear-gradient(#8DC7AB, #fff) ;
+    height: 100px;
+    width: 100%;
+    padding: 50%;
+    @media (min-width: 600px) {
+        padding: 20%;
+    }
+}
 .hero-container ul{
-    margin-bottom: 1em;
+    display: block;
+    width: 100%;
+    margin: 1em auto;
+    text-align: center;
 }
 
 .hero-container-R span{
@@ -65,9 +70,10 @@
     background-color: #d5b942;
     background-image: url('https://i.ibb.co/6gJ4Mpv/pexels-photo-196644.jpg');
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size:cover;
+    padding: 20%;
+    width: 100%;
     @media (min-width: 500px) {
-        grid-area: hero-container-L;
     }
 }
 
@@ -80,10 +86,11 @@
 .hero-header{
     font-family: $header-title;
     font-weight: 900;
-    padding-right: 5%;
     font-size: 2.5em;
     padding-bottom: 3em;
+    margin: 1em;
     color: $primary-color;
+    text-align: center;
     @media screen and (min-width:600px){
         font-size: 2.5em;
         padding-bottom: .5em;}
@@ -111,7 +118,7 @@
 }
 
 .hero-container-R a:hover{
-    color: $main-hover-color;
+    color: $first-button-social-color;
 }
 .hero-container-R .fa{
     font-size: $social-icons;
@@ -122,7 +129,7 @@
 }
 
 .hero-container-R .fa:hover{
-    color: $main-hover-color;
+    color: $first-button-social-color;
 
   }
 
