updated links because it was given WAVE error

--- a/src/sass/3-basics/typograpgy.scss
+++ b/src/sass/3-basics/typograpgy.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&family=Raleway:wght@400;800&display=swap');
 
 /* FONT SIZE */
-$primary-size: 18px;
-$social-icons: 25px;
-$small-font: 12px;
+$primary-size: 1.1em;
+$social-icons:1.6em;
+$small-font: 1em;
 
 /* FONT FAMILY */
 $header-title: 'Raleway', sans-serif;
