--- a/src/sass/4-layout/footer.scss
+++ b/src/sass/4-layout/footer.scss
@@ -17,6 +17,9 @@
 }
 .footer-links-bottom h1{
     font-size: 2.5em;
+    margin-left: 1em;
+    margin-bottom: .2em;
+
 }
 
 .footer-links-bottom li{
@@ -25,10 +28,11 @@
 
 #bottomFooter ul {
     display: inline-flex;
+    text-align: center;
 }
 
 #bottomFooter .fa{
-    font-size: 20px;
+    font-size: $social-icons;
     transition: ease-in .3s;
 }
 
