--- a/src/sass/4-layout/1-home/hero.scss
+++ b/src/sass/4-layout/1-home/hero.scss
@@ -52,13 +52,11 @@
 }
 
 .hero-container-R{
+    color: $second-button-social-color;
     position: absolute;
-    top: 10%;
-    margin-left: 5%;
     @media (min-width: 500px) {
     top: 15%;
     right: 0;
-    margin-left: 0;
     padding-left: 0;
     text-align: end;
 }
@@ -81,17 +79,17 @@
 .hero-container li{
     display: inline-block ;
     margin: 1em 0;
-    padding-right: 2em;
+    padding: 0 .5em;
 }
 .hero-header{
     font-family: $header-title;
     font-weight: 900;
-    font-size: 2.5em;
-    padding-bottom: 3em;
+    font-size: 2em;
     margin: 1em;
     color: $primary-color;
     text-align: center;
     @media screen and (min-width:600px){
+        padding-bottom: 3em;
         font-size: 2.5em;
         padding-bottom: .5em;}
     @media screen and (min-width:1000px){
@@ -110,18 +108,20 @@
     display: flex;
     justify-content: flex-end;
 }
-.hero-container-R{
-    color: $second-button-social-color;
-}
+
 .hero-container-R a{
+    @media screen and (min-width:600px) { 
     font-size: $social-icons;
+    }
 }
 
 .hero-container-R a:hover{
     color: $first-button-social-color;
 }
 .hero-container-R .fa{
+    @media screen and (min-width:600px) { 
     font-size: $social-icons;
+    }
 }
 .hero-container-R a:before{
     visibility: visible;
