--- a/src/sass/4-layout/1-home/projects.scss
+++ b/src/sass/4-layout/1-home/projects.scss
@@ -1,4 +1,6 @@
 .projects{
+    display: flex;
+    flex-wrap: wrap;
     @media screen and (min-width: 600px){
     margin: 1em 2em;
     }
@@ -27,6 +29,7 @@
     border-radius: 1em;
     background-color: $fourth-color;
     transition: ease-in .3s;
+    margin: 3em auto;
     @media screen and (min-width: 768px){
         width: 380px;
         margin: 3em 1em;
