--- a/src/sass/4-layout/2-Projects/Project-hero.scss
+++ b/src/sass/4-layout/2-Projects/Project-hero.scss
@@ -1,6 +1,6 @@
 .layout-hero{
     background-color: $third-color;
-    height:250px;
+    height:100px;
     width: 100%;
     padding: 0;
     position: relative;
@@ -10,5 +10,9 @@
 position: absolute;
 bottom: 10%;
 padding-left: 5%;
+font-size: 1.2em;
 color: $primary-color;
+@media screen and (min-width: 600px){
+    font-size: 2em;
+}
 }
