--- a/CSS/main.css
+++ b/CSS/main.css
@@ -43,8 +43,7 @@ h4 {
 
 }
 }
-a,
-a:focus,
+a, a:focus,
 a:active,
 a:visited {
     color: var(--link);
@@ -127,12 +126,12 @@ bottom {
     background-position:50% 50%;
     image-rendering: -webkit-optimize-contrast;
     @media only screen and (min-width: 1000px) {
-        width: 400px;
+        width: 375px;
         height: 375px; 
 
     @media only screen and (min-width: 1600px) {
-        width: 500px;
-        height: 450px;
+        width: 400px;
+        height: 400px;
     }
 }
 }
@@ -143,7 +142,7 @@ context-container-1{
 }
 }
 .back-one {
-    background-image: url(https://i.ibb.co/ThqqjZk/1-1a-D-CPD-New-CP-member-Default.png);
+    background-image: url(https://i.ibb.co/s1CJrTn/fiver-thumbnail-7.png);
 }
 
 .back-two {
@@ -159,11 +158,11 @@ context-container-1{
 }
 
 .back-five {
-    background-image: url(https://i.ibb.co/x2CpNqm/Frame-1.png);
+    background-image: url(https://i.ibb.co/N2MmRyp/fiver-thumbnail-4.png);
 }
 
 .back-seven {
-    background-image: url(https://i.ibb.co/N2MmRyp/fiver-thumbnail-4.png); 
+    background-image: url(https://i.ibb.co/0nYcwjN/fiver-thumbnail-6.png); 
 }
 
 .back-six {
@@ -283,6 +282,10 @@ context-container-1{
     transform: scale(1.1);
     z-index: 1;
 
+}
+
+.fa:hover{
+    color: burlywood;
 }
 
 .social-links li {
