--- a/CSS/main.css
+++ b/CSS/main.css
@@ -644,9 +644,8 @@ footer .socials {
 }
 
 .content-container-project img {
-    max-width: 100%;
+    width: 100%;
     @media only screen and (min-width: 600px) {
-    max-width: 80%;
     height: auto;
 }
 }
