--- a/CSS/main.css
+++ b/CSS/main.css
@@ -199,11 +199,42 @@ context-container-1{
     margin-top: 2em;
     padding: 2em 3em 0 0;
 }
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { 
+    grid-area: 2 / 1 / 3 / 2;
+    @media only screen and (min-width: 1250px) {
+        grid-area: 1 / 3 / 2 / 4; }}
+.div4 { 
+   
+        grid-area: 2 / 2 / 3 / 3;  
+        @media only screen and (min-width: 1250px) {
+        grid-area: 2 / 1 / 3 / 2; }
+}
+.div5 { 
+    grid-area: 3 / 1 / 4 / 2;   
+    @media only screen and (min-width: 1250px) {
+        grid-area: 2 / 2 / 3 / 3; }
+    }
+
+
 
 .project-grid {
-    display: flex;
-    flex-wrap: wrap;
+ 
+    @media only screen and (min-width: 830px) {
+        display: grid;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+
+    @media only screen and (min-width: 1250px) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
 }
+}
+
 .content-grid{
     display: grid;
     justify-content: center;
