--- a/CSS/main.css
+++ b/CSS/main.css
@@ -648,6 +648,7 @@ footer .socials {
 }
 .background-color{
     padding: 2em;
+    margin: 0;
     background-color: var(--sec-color);
     @media only screen and (min-width: 600px) {
     padding: 6em;
@@ -688,7 +689,7 @@ footer .socials {
 }
 
 .content-container-project img {
-    width: 100%;
+    max-width: 100%;
     @media only screen and (min-width: 600px) {
     height: auto;
 }
