--- a/CSS/main.css
+++ b/CSS/main.css
@@ -387,7 +387,6 @@ context-container-1{
 }
 
 .container {
-    display: flex;
     height: 100vh;
     justify-content: space-around;
     align-items: center;
@@ -396,7 +395,11 @@ context-container-1{
     background-color: var(--sec-color);
     position: relative;
     transition: all .8s ease;
+    @media only screen and (min-width: 600px) {
+        display: flex;
+    }
 }
+
 
 .container_content {
     width: 100%;
