--- a/CSS/main.css
+++ b/CSS/main.css
@@ -174,7 +174,7 @@ context-container-1{
 }
 
 .back-five {
-    background-image: url(https://i.ibb.co/N2MmRyp/fiver-thumbnail-4.png);
+    background-image: url(https://i.ibb.co/r3gpDGn/Slide-16-9-1.png);
 }
 
 .back-seven {
