--- a/CSS/main.css
+++ b/CSS/main.css
@@ -259,7 +259,9 @@ context-container-1{
 }
 
 
-
+.about-container{
+    margin: 2em 6em;
+}
 .about-container h1, .dp-containter h1{
     font-size: 4em;
     margin: 0 0 .5em 0 ;
