changed the hover

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -330,23 +330,22 @@ context-container-1{
 
     
   .card-content-container:hover {
-    background-color: hsl(151, 51%, 16%) ;
+
     border: .5px solid hsl(151, 76%, 82%);
     border-radius: 5%;
-    width: 100%;
     padding: 5%;
     margin: auto;
 
     & .content-grid-text h2 {
       transform: translateY(-10px);
       transition: all 0.6s;
-      color: #D9D9D9;
+      color: #94934d;
      
     }
     & .content-grid-text a {
         transform: translateY(5px);
         transition: all 0.6s;
-        color: #D9D9D9;
+        color: #94934d;
        
       }
     & .content-grid-text ul {
