--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,11 +2,13 @@
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
   @import url('https://api.fontshare.com/v2/css?f[]=clash-display@400,600&f[]=excon@100,300,400,500,700,900&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
+    font-family: "Afacad Flux", sans-serif;
+    font-style: normal;
 }
 
 :root {
@@ -35,6 +37,7 @@ h4 {
     font-family: 'Clash Display', sans-serif;
     margin: 1em 0;
     font-weight: 700;
+    letter-spacing: 2px;
     color: var(--project-header-color);
 }
 .project-container h1{
