--- a/CSS/main.css
+++ b/CSS/main.css
@@ -95,6 +95,10 @@ bottom {
     justify-content: space-between;
 }
 
+.mar-w{
+ margin-top: 2em;
+ margin-bottom: 2em;
+}
 iframe{
     max-width: 100%;
     max-width: 100%;
@@ -242,7 +246,7 @@ context-container-1{
         grid-column-gap: 2em;
         grid-row-gap: 2em;
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
     }
     @media only screen and (min-width: 1250px) {
 
