--- a/CSS/main.css
+++ b/CSS/main.css
@@ -196,8 +196,9 @@ context-container-1{
 }
 .card-content-container ul {
     display: flex;
+    @media only screen and (min-width: 600px) {
     flex-wrap: wrap;
-}
+}}
 
 
 .content-container {
@@ -303,12 +304,19 @@ context-container-1{
     justify-content: space-between;
 }
 }
+
+.flex-wrap-r{
+    display: flex;
+    flex-wrap: wrap;  
+
+}
  .bold{
     font-weight: bold;
  }
 
 .card-content-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 4em;
     margin: 2em;
     width: 300px;
@@ -319,6 +327,7 @@ context-container-1{
     transform: translateY(0px);
     transition: all 0.6s;
     @media only screen and (min-width: 1000px) {
+        flex-wrap: nowrap;
         width: 100%;
         max-width: 500px;
         grid-template-columns: 4fr;
