--- a/CSS/main.css
+++ b/CSS/main.css
@@ -314,6 +314,14 @@ context-container-1{
     font-weight: bold;
  }
 
+ .border-line-r{
+    border: #5cb187 1px dashed;
+    width: 100%;
+    @media only screen and (min-width: 600px) {
+    border: none;
+}
+ }
+
 .card-content-container {
     display: flex;
     flex-wrap: wrap;
