--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://api.fontshare.com/v2/css?f[]=clash-display@400,600&f[]=excon@100,300,400,500,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
-  @import url('https://api.fontshare.com/v2/css?f[]=clash-display@400,600&f[]=excon@100,300,400,500,700,900&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
-  * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -40,33 +40,36 @@ h4 {
     letter-spacing: 2px;
     color: var(--project-header-color);
 }
-.project-container h1{
+
+.project-container h1 {
     font-size: 4em;
     margin-left: .5em;
-    @media only screen and (min-width: 600px) {
 
+    @media only screen and (min-width: 600px) {}
+}
 
-}
-}
-a, a:focus,
+a,
+a:focus,
 a:active,
 a:visited {
     color: var(--link);
     font-size: 1.1em;
 }
 
-.medium-text{
+.medium-text {
     font-size: 1.5em;
+
     @media only screen and (min-width: 600px) {
-    font-size: 2em;
-}
+        font-size: 2em;
+    }
 }
 
-.large-text{
+.large-text {
     font-size: 2em;
+
     @media only screen and (min-width: 600px) {
-    font-size: 3em;
-}
+        font-size: 3em;
+    }
 }
 
 a:hover {
@@ -74,37 +77,41 @@ a:hover {
     transform: scale(1);
     color: var(--sec-color);
     animation: alternate 3ms;
-    background:var(--contrast-color);
+    background: var(--contrast-color);
 }
 
-.top{ 
+.top {
     margin-top: 1em;
 }
+
 bottom {
     margin-bottom: 1em;
 }
-.wrap{
+
+.wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.wrap-2{
+.wrap-2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.mar-w{
- margin-top: 2em;
- margin-bottom: 2em;
+.mar-w {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
-iframe{
+
+iframe {
     max-width: 100%;
     max-width: 100%;
     height: 400px;
 }
-.space-between{
+
+.space-between {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -126,22 +133,27 @@ iframe{
     margin: 0;
     font-size: 1.4em;
     font-weight: 500;
+
     @media only screen and (min-width: 1000px) {
-     font-size: 1.2em;
-@media only screen and (min-width: 1400px) {
-    font-size: 1.6em;
+        font-size: 1.2em;
+
+        @media only screen and (min-width: 1400px) {
+            font-size: 1.6em;
+        }
+    }
 }
-}
-}
+
 .card-content-container h3 {
     font-weight: 300;
 }
-.context{
+
+.context {
     @media only screen and (min-width: 1250px) {
         display: flex;
         justify-content: center;
+    }
 }
-}
+
 /*background images for grid*/
 .context-background-img {
     border-radius: 1em;
@@ -149,24 +161,27 @@ iframe{
     height: 300px;
     border: 1px solid #eee;
     background-size: cover;
-    background-position:50% 50%;
+    background-position: 50% 50%;
     image-rendering: -webkit-optimize-contrast;
+
     @media only screen and (min-width: 1000px) {
         width: 320px;
-        height: 375px; 
+        height: 375px;
 
-    @media only screen and (min-width: 1400px) {
-        width: 400px;
-        height: 400px;
+        @media only screen and (min-width: 1400px) {
+            width: 400px;
+            height: 400px;
+        }
     }
 }
-}
-context-container-1{
+
+context-container-1 {
     @media only screen and (min-width: 600px) {
-    display: flex;
-    justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
+    }
 }
-}
+
 .back-one {
     background-image: url(https://i.ibb.co/rfBwZKF/fiver-thumbnail-7.png);
 }
@@ -188,17 +203,20 @@ context-container-1{
 }
 
 .back-seven {
-    background-image: url(https://i.ibb.co/0nYcwjN/fiver-thumbnail-6.png); 
+    background-image: url(https://i.ibb.co/0nYcwjN/fiver-thumbnail-6.png);
 }
 
 .back-six {
-    background:#395346;
+    background: #395346;
 }
+
 .card-content-container ul {
     display: flex;
+
     @media only screen and (min-width: 600px) {
-    flex-wrap: wrap;
-}}
+        flex-wrap: wrap;
+    }
+}
 
 
 .content-container {
@@ -229,19 +247,22 @@ context-container-1{
 }
 
 
-.other-projects{
+.other-projects {
     @media only screen and (min-width: 600px) {
-    margin: auto 1em;
-    width: 50%;
+        margin: auto 1em;
+        width: 50%;
+
     }
+
     @media only screen and (min-width: 830px) {
-    margin: auto 2em;
-    width: 80%;
-}
+        margin: auto 2em;
+        width: 80%;
+    }
 }
 
 .project-grid {
     z-index: 9;
+
     @media only screen and (min-width: 830px) {
         display: grid;
         grid-column-gap: 2em;
@@ -249,31 +270,46 @@ context-container-1{
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, 1fr);
     }
-    @media only screen and (min-width: 1250px) {
 
-    }
+    @media only screen and (min-width: 1250px) {}
 
 }
 
-.div1 { grid-area: 1 / 2 / 2 / 3; }
-.div2 { grid-area: 1 / 3 / 2 / 4; }
-.div3 { grid-area: 2 / 2 / 3 / 3; }
-.div4 { grid-area: 2 / 3 / 3 / 4; }
-.div5 { grid-area: 3 / 2 / 4 / 3; }
+.div1 {
+    grid-area: 1 / 2 / 2 / 3;
+}
 
-.content-grid{
+.div2 {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.div3 {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.div4 {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.div5 {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.content-grid {
     display: grid;
     justify-content: center;
     margin: 45vh 1em 0 1em;
 }
 
 
-.about-container{
+.about-container {
     margin: 2em 6em;
 }
-.about-container h1, .dp-containter h1{
+
+.about-container h1,
+.dp-containter h1 {
     font-size: 4em;
-    margin: 0 0 .5em 0 ;
+    margin: 0 0 .5em 0;
 }
 
 .about-container-text {
@@ -292,6 +328,7 @@ context-container-1{
     text-align: center;
     font-weight: 500;
     margin: .2em .2em 0 0;
+
     @media only screen and (min-width: 600px) {
         margin: .5em .5em 0 0;
     }
@@ -300,27 +337,34 @@ context-container-1{
 
 .flex {
     @media only screen and (min-width: 1000px) {
-    display: flex;
-    justify-content: space-between;
-}
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
-.flex-wrap-r{
+.flex-wrap-r {
     display: flex;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
 
 }
- .bold{
+
+.bold {
     font-weight: bold;
- }
-
- .border-line-r{
-    border: #5cb187 1px dashed;
-    width: 100%;
-    @media only screen and (min-width: 600px) {
-    border: none;
 }
- }
+
+.border-line-r {
+    border-top: #5cb187 1px dashed;
+    width: 100%;
+
+    @media only screen and (min-width: 600px) {
+        border: none;
+    }
+}
+
+.border-line-t {
+    border-top: #5cb187 1px dashed;
+    width: 100%;
+}
 
 .card-content-container {
     display: flex;
@@ -334,6 +378,7 @@ context-container-1{
     font-size: 16px;
     transform: translateY(0px);
     transition: all 0.6s;
+
     @media only screen and (min-width: 1000px) {
         flex-wrap: nowrap;
         width: 100%;
@@ -343,15 +388,16 @@ context-container-1{
         grid-template-columns: 2fr;
         justify-content: space-between;
     }
+
     @media only screen and (min-width: 1400px) {
         max-width: 800px;
         max-height: 400px;
         grid-template-rows: 3fr;
         grid-template-columns: 2fr;
     }
-  }
+}
 
-  .card-content-container:hover {
+.card-content-container:hover {
 
     border: .5px solid hsl(151, 76%, 82%);
     border-radius: 5%;
@@ -359,36 +405,39 @@ context-container-1{
     margin: auto;
 
     & .content-grid-text h2 {
-      transform: translateY(-10px);
-      transition: all 0.6s;
-      color: #94934d;
-     
+        transform: translateY(-10px);
+        transition: all 0.6s;
+        color: #94934d;
+
     }
+
     & .content-grid-text a {
         transform: translateY(5px);
         transition: all 0.6s;
         color: #94934d;
-       
-      }
-    & .content-grid-text ul {
-      transform: translateY(-5px);
-      transition: all 0.6s;
-    }
-  }
 
-  .card-content-container:hover {
-    border: 1px solid hsl(149, 68%, 76%);
-    
-    & .content-grid-text h2 {
-      transform: translateY(10px);
-      transition: all 0.6s;
-    
     }
+
     & .content-grid-text ul {
-      transform: translateY(5px);
-      transition: all 0.6s;
+        transform: translateY(-5px);
+        transition: all 0.6s;
     }
-  }
+}
+
+.card-content-container:hover {
+    border: 1px solid hsl(149, 68%, 76%);
+
+    & .content-grid-text h2 {
+        transform: translateY(10px);
+        transition: all 0.6s;
+
+    }
+
+    & .content-grid-text ul {
+        transform: translateY(5px);
+        transition: all 0.6s;
+    }
+}
 
 .fa {
     color: #000;
@@ -399,7 +448,7 @@ context-container-1{
 
 }
 
-.fa:hover{
+.fa:hover {
     color: burlywood;
 }
 
@@ -409,7 +458,8 @@ context-container-1{
     margin: 3em 2em 1em 0em;
     padding: 0 8em 0 0;
 }
-.social-links a{
+
+.social-links a {
     display: table-caption;
 }
 
@@ -429,9 +479,10 @@ context-container-1{
     border: #8dc7ab 1em solid;
 }
 
-.about{
+.about {
     margin: 6em 0 0 0;
 }
+
 .about-btn {
     padding: 15px;
     overflow-x: hidden;
@@ -461,6 +512,7 @@ context-container-1{
 
 .container {
     height: 100vh;
+    max-width: 100%;
     justify-content: space-around;
     align-items: center;
     color: #fff;
@@ -468,6 +520,7 @@ context-container-1{
     background-color: var(--sec-color);
     position: relative;
     transition: all .8s ease;
+
     @media only screen and (min-width: 600px) {
         display: flex;
     }
@@ -476,18 +529,19 @@ context-container-1{
 
 .container_content {
     width: 100%;
+
     @media only screen and (min-width: 600px) {
-    width: 80%;
-}
+        width: 80%;
+    }
 }
 
 .container_content_inner {
     width: 100%;
-    padding: 10%;
+    padding: 0 4em;
 
     @media only screen and (min-width: 1000px) {
         width: 70%;
-        padding: 4em;
+        padding: 0 6em;
     }
 }
 
@@ -504,17 +558,19 @@ context-container-1{
 
 .project-container {
     margin: 1em;
+
     @media only screen and (min-width: 600px) {
         margin: auto;
         width: 50%;
-}
-@media only screen and (min-width: 1040px) {
-    margin: auto;
-    width: 100%;
-}
+    }
+
+    @media only screen and (min-width: 1040px) {
+        margin: auto;
+        width: 100%;
+    }
 }
 
-.one-margin{
+.one-margin {
     margin-left: 1.2em;
 }
 
@@ -557,7 +613,8 @@ context-container-1{
     overflow: hidden;
     height: auto;
 }
-.container_content_inner p{
+
+.container_content_inner p {
     color: #395346;
     transform: translateY(200px);
     animation: slideUp .8s ease forwards .5s;
@@ -570,6 +627,7 @@ context-container-1{
     margin-bottom: 20px;
     transform: translateY(200px);
     animation: slideUp .8s ease forwards .6s;
+
     @media only screen and (min-width: 1000px) {
         font-size: 6em;
     }
@@ -619,17 +677,19 @@ nav {
     animation: slideUp .8s ease-in-out forwards .8s;
 
 }
-.nav-link h1{
+
+.nav-link h1 {
     margin-left: 1em;
 }
 
 
 
- .nav-link ul li {
+.nav-link ul li {
     padding-right: .5em;
+
     @media only screen and (min-width: 1000px) {
-    padding-right: 1em;
- }
+        padding-right: 1em;
+    }
 }
 
 .fixed-nav {
@@ -640,11 +700,12 @@ nav {
 .fixed-nav ul {
     display: flex;
     margin-left: 1em;
+
     @media only screen and (min-width: 1000px) {
 
-justify-content: space-between;
-align-items: center;
-}
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 footer {
@@ -657,13 +718,15 @@ footer .socials {
     justify-content: space-between;
 }
 
-.footer-content{
+.footer-content {
     padding: 1em .5em;
+
     @media only screen and (min-width: 600px) {
-    padding: 2em 6em;
+        padding: 2em 6em;
     }
 }
-header{
+
+header {
     z-index: 9;
 }
 
@@ -678,9 +741,10 @@ header{
 .header-project h1 {
     color: var(--sec-color);
 }
+
 .header,
 .project-nav {
-  
+
     position: sticky;
     top: 0;
 }
@@ -690,8 +754,8 @@ header{
     display: flex;
     justify-content: space-between;
     background-color: var(--sec-color);
-    @media only screen and (min-width: 600px) {
-    }
+
+    @media only screen and (min-width: 600px) {}
 }
 
 .project-information-container {
@@ -718,38 +782,41 @@ header{
     margin: .5em;
 }
 
-.list-tab{
+.list-tab {
     display: flex;
 }
+
 .list-tab ul {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    @media only screen and (min-width: 600px) {
 
-    }
+    @media only screen and (min-width: 600px) {}
 }
-.background-color{
+
+.background-color {
     padding: 2em;
     margin: 0;
     background-color: var(--sec-color);
+
     @media only screen and (min-width: 600px) {
-    padding: 6em;
-    
+        padding: 6em;
+
+    }
 }
-}
-.personal-container{
+
+.personal-container {
     text-align: center;
 }
 
-.para-img{
+.para-img {
     @media only screen and (min-width:1250px) {
         width: 50%;
     }
 }
 
 
-.dp-box{
+.dp-box {
     width: 200px;
     max-height: 400px;
     border-right: 1px dotted #395346;
@@ -757,6 +824,7 @@ header{
 
 .project-conext-container {
     margin: 0 1em;
+
     @media only screen and (min-width: 600px) {
         margin: 0 6em;
     }
@@ -774,10 +842,12 @@ header{
 
 .content-container-project img {
     max-width: 100%;
+
     @media only screen and (min-width: 600px) {
-    height: auto;
+        height: auto;
+    }
 }
-}
+
 .content-container-project-1 img {
     width: 100%;
     height: auto;
@@ -794,17 +864,19 @@ header{
     width: 100%;
     height: 100%;
     max-width: 1000px;
-    max-height:600px;
+    max-height: 600px;
 }
-.cute-bullets{
+
+.cute-bullets {
     margin-left: 1em;
 }
-.cute-bullets li{
+
+.cute-bullets li {
     list-style: circle;
     margin-right: 1em;
 }
 
-.border-r{
+.border-r {
     border-right: 2px dotted hsl(150, 19%, 27%);
     margin: 25px;
 }
