updated with and added nav to projects

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -907,7 +907,10 @@ header {
     border-radius: 5%;
     padding: 1em;
 }
-
+.dp-box img{ 
+    width: 100%;
+    height: auto;
+}
 .project-conext-container {
     margin: 0 1em;
 
